--- a/nodefront/src/index.html
+++ b/nodefront/src/index.html
@@ -7,9 +7,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
-  </style>
+  <link rel="preconnect" href="https://fonts.bunny.net">
+  <link href="https://fonts.bunny.net/css?family=martian-mono:400|space-mono:400" rel="stylesheet" />
 </head>
 
 <body>
