--- a/nodefront/src/index.html
+++ b/nodefront/src/index.html
@@ -7,8 +7,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.bunny.net">
-  <link href="https://fonts.bunny.net/css?family=martian-mono:400|space-mono:400" rel="stylesheet" />
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Funnel+Display:wght@500&display=swap');
+  </style>
 </head>
 
 <body>
