--- a/nodefront/src/index.html
+++ b/nodefront/src/index.html
@@ -3,17 +3,19 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Nodefront</title>
+  <title>Ladevorgang - NODE</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="NODEfavi.png">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Funnel+Display:wght@500&display=swap');
   </style>
 </head>
 
 <body>
+  <div id="particles-js"></div>
   <app-root></app-root>
 </body>
+<script src="particles.js"></script>
 
 </html>
