--- a/nodefront/src/index.html
+++ b/nodefront/src/index.html
@@ -8,14 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="NODEfavi.png">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Funnel+Display:wght@500&display=swap');
-  </style>
+@import url('https://fonts.googleapis.com/css2?family=Lexend&display=swap');
+</style>
 </head>
 
 <body>
-  <div id="particles-js"></div>
   <app-root></app-root>
 </body>
-<script src="particles.js"></script>
 
 </html>
